--- a/album.html
+++ b/album.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title id="title">Album:Overexposed</title>
         <h1>Album:Overexposed</h1>
-         < img class="Overexposed" src="https://upload.wikimedia.org/wikipedia/en/7/77/Maroon_5_-_Overexposed.png" alt="Maroon5" width="200">
+         < img class="Overexposed" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Maroon_5_2016.jpg/600px-Maroon_5_2016.jpg" alt="Maroon5" width="200">
 <ul>
             <li>One More Night</li>
             <li>Payphone</li>
@@ -33,17 +33,3 @@
          li { font-family: Arial;
         </style>
         
-      
-© 2018 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Press h to open a hovercard with more details.
