--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         
         <h1>Maroon 5</h1>
         <h2 id="Introduction">Maroon 5 is a famous and popular American pop rock band from Los Angeles, California. It currently consists of lead vocalist Adam Levine, keyboardist and rhythm guitarist Jesse Carmichael, bassist Mickey Madden, lead guitarist James Valentine, drummer Matt Flynn, keyboardist PJ Morton and multi-instrumentalist Sam Farrar.<h3>
-      < img class="Maroon5" src="https://en.wikipedia.org/wiki/File:Maroon_5_2016.jpg" alt="Maroon5" width="700">
+      <img class="Maroon5" src="https://www.google.com/url?sa=i&source=imgres&cd=&cad=rja&uact=8&ved=2ahUKEwinpMqB9freAhWsIDQIHdcJAQ8QjRx6BAgBEAU&url=https%3A%2F%2Fespalhafactos.com%2F2018%2F06%2F09%2Fmaroon-5-three-little-birds%2F&psig=AOvVaw28Ts7Js2KHL3uFTcYodatH&ust=1543625969918111" alt="Maroon5" width="700">
         <h2>More Information</h2>
             <li>Musical style and influences</li>
             <li>Awards and recognition</li>
