--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
             </thead>
             <tbody>
             <tr>
-                <td> < img class="V" src="https://upload.wikimedia.org/wikipedia/en/5/53/Maroon_5_-_V_%28Official_Album_Cover%29.png" alt="Maroon5" width="200"></a ></td>
+                <td> < img class="frame" src="https://upload.wikimedia.org/wikipedia/en/5/53/Maroon_5_-_V_%28Official_Album_Cover%29.png" alt="Maroon5" width="200"></a ></td>
             <td>V</td>
             <td>V was Maroon 5's first album to be released through Interscope after the band's previous label, A&M Octone Records, transferred them along with most of its artists to Interscope. </td>
             </tr>
             <tr>
-            <td>< img class="Overexposed" src="https://upload.wikimedia.org/wikipedia/en/7/77/Maroon_5_-_Overexposed.png" alt="Maroon5" width="200"> </a ></td>
+            <td>< img class="frame" src="https://upload.wikimedia.org/wikipedia/en/7/77/Maroon_5_-_Overexposed.png" alt="Maroon5" width="200"> </a ></td>
             <td>Overexposed</td>
             <td>It is the band's only album not to feature keyboardist, rhythm guitarist and background vocalist, Jesse Carmichael, who took a temporary break from performing with the group to focus on his studies back then, replaced by musician PJ Morton.</td>
             </tr>
             <tr>
-            <td>< img class="It Won't Be Soon Before Long" src="https://upload.wikimedia.org/wikipedia/en/9/9b/Maroon_5_-_It_Won%27t_Be_Soon_Before_Long.png"alt="Maroon5" width="200"></a ></td>
+            <td>< img class="frame" src="https://upload.wikimedia.org/wikipedia/en/9/9b/Maroon_5_-_It_Won%27t_Be_Soon_Before_Long.png"alt="Maroon5" width="200"></a ></td>
             <td>It Won't Be Soon Before Long</td>
             <td> It was released in May 2007 by A&M Octone Records, as the follow-up to their debut album Songs About Jane (2002). The name was inspired by a phrase the band adopted to keep themselves motivated while on their tour.</td>
             </tr>
