--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
             </thead>
             <tbody>
             <tr>
-                <td> < img class="frame" src="https://pbs.twimg.com/media/Bt5DWBKCQAAxBEw.jpg" alt="Maroon5" width="200"></a ></td>
+                <td> < img class="V" src="https://pbs.twimg.com/media/Bt5DWBKCQAAxBEw.jpg" alt="Maroon5" width="200"></a ></td>
             <td>V</td>
             <td>V was Maroon 5's first album to be released through Interscope after the band's previous label, A&M Octone Records, transferred them along with most of its artists to Interscope. </td>
             </tr>
             <tr>
-            <td>< img class="frame" src="https://www.ethaicd.com/img/68923.jpg" alt="Maroon5" width="200"> </a ></td>
+            <td>< img class="over" src="https://www.ethaicd.com/img/68923.jpg" alt="Maroon5" width="200"> </a ></td>
             <td>Overexposed</td>
             <td>It is the band's only album not to feature keyboardist, rhythm guitarist and background vocalist, Jesse Carmichael, who took a temporary break from performing with the group to focus on his studies back then, replaced by musician PJ Morton.</td>
             </tr>
             <tr>
-            <td>< img class="frame" src="https://www.quedeletras.com/caratulas/200704131739_grande.jpg" width="200"></a ></td>
+            <td>< img class="It was" src="https://www.quedeletras.com/caratulas/200704131739_grande.jpg" width="200"></a ></td>
             <td>It Won't Be Soon Before Long</td>
             <td> It was released in May 2007 by A&M Octone Records, as the follow-up to their debut album Songs About Jane (2002). The name was inspired by a phrase the band adopted to keep themselves motivated while on their tour.</td>
             </tr>
