--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@ function check(form)/*function to check userid & password*/
  /*the following code checkes whether the entered userid and password are matching*/
  if(form.userid.value == "user" && form.pswrd.value == "password")
   {
-    window.open('https://leelajin.github.io/overexposed.html')/*opens the target page while Id & password matches*/
+    window.open('https://leelajin.github.io/album.html')/*opens the target page while Id & password matches*/
   }
  else
  {
