--- a/survey.html
+++ b/survey.html
@@ -1,8 +1,8 @@
 <p>Select your favorite album:</p>
-<form action="https://jenniferwcl.github.io/V.html">
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Sugar">Sugar<br>
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Maps">Maps<br>
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Animals">Animals<br>
+<form action="https://leelajin.github.io/album.html">
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Sad">Sad<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Ticket">Ticket<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Daylight">Daylight<br>
  
   Your favorite browser is: <input type="text" id="result">
   <a href="https://leelajin.github.io/album.html">
