--- a/album.html
+++ b/album.html
@@ -33,3 +33,5 @@
          li { font-family: Arial;
         </style>
         
+        <a id=survey href=https://leelajin.github.io/survey.html>survey</a></strong> </a>
+        
