--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <td>V was Maroon 5's first album to be released through Interscope after the band's previous label, A&M Octone Records, transferred them along with most of its artists to Interscope. </td>
             </tr>
             <tr>
-            <td>< img class="frame" src="https://en.wikipedia.org/wiki/File:Maroon_5_-_Overexposed.png" alt="Maroon5" width="200"> </a ></td>
+            <td>< img class="frame" src="https://www.ethaicd.com/img/68923.jpg" alt="Maroon5" width="200"> </a ></td>
             <td>Overexposed</td>
             <td>It is the band's only album not to feature keyboardist, rhythm guitarist and background vocalist, Jesse Carmichael, who took a temporary break from performing with the group to focus on his studies back then, replaced by musician PJ Morton.</td>
             </tr>
