--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </thead>
             <tbody>
             <tr>
-                <td> < img class="frame" src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjvzfDk_freAhWUHzQIHXQnCgUQjRx6BAgBEAU&url=http%3A%2F%2Fmaroon5.wikia.com%2Fwiki%2FFile%3AMaroon_5_%25E2%2580%2593_V_album_2014_(_Full_Album_)_%252B_Mp3_Download&psig=AOvVaw3lhMWf-pcriG6qBJgSG_iO&ust=1543628314374051" alt="Maroon5" width="200"></a ></td>
+                <td> < img class="frame" src="https://s3.amazonaws.com/creativeallies/snapshots/000/120/746/original/maroon_5.jpg"></a ></td>
             <td>V</td>
             <td>V was Maroon 5's first album to be released through Interscope after the band's previous label, A&M Octone Records, transferred them along with most of its artists to Interscope. </td>
             </tr>
@@ -76,7 +76,7 @@
             <td>It is the band's only album not to feature keyboardist, rhythm guitarist and background vocalist, Jesse Carmichael, who took a temporary break from performing with the group to focus on his studies back then, replaced by musician PJ Morton.</td>
             </tr>
             <tr>
-            <td>< img class="frame" src="https://www.quedeletras.com/caratulas/200704131739_grande.jpg" width="200"></a ></td>
+            <td>< img class="frame" src="https://rlv.zcache.com/maroon_5_it_wont_be_too_soon_before_long_poster-r657bbaf8cdc2448f840c65fb78f70c0b_w2q_8byvr_540.jpg" width="200"></a ></td>
             <td>It Won't Be Soon Before Long</td>
             <td> It was released in May 2007 by A&M Octone Records, as the follow-up to their debut album Songs About Jane (2002). The name was inspired by a phrase the band adopted to keep themselves motivated while on their tour.</td>
             </tr>
