--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </thead>
             <tbody>
             <tr>
-            <td> <img class="frame" src="https://s3.amazonaws.com/creativeallies/snapshots/000/120/746/original/maroon_5.jpg" width="200"></a ></td>
+            <td> <img class="frame" src="https://s3.amazonaws.com/creativeallies/snapshots/000/120/746/original/maroon_5.jpg" alt= "maroon 5" width="200"></a ></td>
             <td>V</td>
             <td>V was Maroon 5's first album to be released through Interscope after the band's previous label, A&M Octone Records, transferred them along with most of its artists to Interscope. </td>
             </tr>
