--- a/donate.html
+++ b/donate.html
@@ -12,7 +12,7 @@ color:#92a8d1;>
 Just donate one dollar for homeless children, let them have home again.<br>
 As long as you donate one dollar, three hundreds of dollar will immediately go in your bank account! Please fill out your information.
 </h1>
-< img class="donate" src="https://si.wsj.net/public/resources/images/BN-VI486_3ePbD_OR_20170928165453.jpg" alt="Hawaii" width="500">
+<img class="donate" src="https://si.wsj.net/public/resources/images/BN-VI486_3ePbD_OR_20170928165453.jpg" alt="donate" width="500">
 <form name="login">
 Name<input type="text" name="userid"/>
 Birthday<input type="birthday" name="birth"/>
